--- a/SoftwareDevInfo/developer/20220510.md
+++ b/SoftwareDevInfo/developer/20220510.md
@@ -8,4 +8,15 @@ It's not as simple of a choice as it seems.
 Some language are popular and **oversaturated**, while others are **trendy** but **obscure** among **recruiters**.
 Either way it can be hard to find a job with them.
 Other coding languages are very old and it can be hard to break into an industry with developers who **possess** 20+ years of experience.
-Some are high in **demand** and low in supply, but very difficult to learn and **apply**.
+Some are high in **demand** and low in supply, but very difficult to learn and **apply**.  
+
+**saturate** verb FILL  
+to fill a thing or place completely so that no more can be added  
+PS: The policy saturated (= a large number of police officers were sent into) the area.  
+**saturate the market**  
+to provide too much of a product so that there is more of the product available than there are people who want to buy it.  
+PS: Since the US market has now been saturated, drug dealers are looking to Europe.  
+
+**saturate** verb MAKE WET  
+to make something or someone completely wet  
+PS: The grass had been saturated by overnight rain.
