--- a/SoftwareDevInfo/developer/20220510.md
+++ b/SoftwareDevInfo/developer/20220510.md
@@ -20,3 +20,12 @@ PS: Since the US market has now been saturated, drug dealers are looking to Euro
 **saturate** verb MAKE WET  
 to make something or someone completely wet  
 PS: The grass had been saturated by overnight rain.
+
+**trendy** adjective 
+(C1) modern and influenced by the most recent fashions or ideas  
+
+**recruit** verb  
+(C1) to persuade someone to work for a company or become a new member of an organization, especially the army.  
+
+**obscure** adjective NOT KNOWN  
+not known to many people  
